re-enabled google maps API calls, fixed image overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,6 +20,7 @@ body {
   position: absolute;
   top: 50px;
   bottom: 0;
+  overflow: hidden;
 }
 
 #splash-page-img {
